--- a/.gitignore
+++ b/.gitignore
@@ -117,7 +117,6 @@ image/o*.*
 circuits/archive
 scripts/archive
 *.ptau
-input.json
 contracts/archive
-circuits/build/zkWitches/*/*.*
+circuits/build/*.*
 artifacts
