git commit TODO

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,5 @@ scripts/archive
 contracts/archive
 circuits/build/**
 artifacts
+#TODO Add Verifiers to ignore once build process is nice and clean
+# contracts/*.sol !contracts/zkWitches.sol
