fix command typo

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "npx hardhat test",
     "compile:circuits": "bash scripts/compile-circuits.sh",
     "version:fix": "node scripts/bump-solidity",
-    "test:fullProof": "npm run compile:circuits && npm run version:fix && npm run compile:contracts && generate:proof && npx hardhat test",
+    "test:fullProof": "npm run compile:circuits && npm run version:fix && npm run compile:contracts && npm run generate:proof && npx hardhat test",
     "generate:proof": "bash scripts/generate-proofs.sh",
     "setup:circom": "bash scripts/setup-circom.sh"
   },
