--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
     "@openzeppelin/contracts": "^4.5.0",
+    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/hardhat": "^6.0.0",
     "chai": "^4.3.6",
     "circomlib": "^2.0.2",
     "circomlibjs": "^0.1.1",
@@ -39,6 +41,7 @@
     "hardhat-gas-reporter": "^1.0.7",
     "sharp": "^0.30.0",
     "snarkjs": "^0.4.13",
+    "typechain": "^8.0.0",
     "web3-utils": "^1.7.0",
     "zeros": "^1.0.0"
   }
