--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,7 @@ scripts/archive
 contracts/archive
 circuits/build/**
 artifacts
+private_keys.json
 typechain-types
 #TODO Add Verifiers to ignore once build process is nice and clean
 # contracts/*.sol !contracts/zkWitches.sol
