--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "compile:circuits": "bash scripts/compile-circuits.sh",
     "version:fix": "node scripts/bump-solidity",
     "test:fullProof": "npm run compile:circuits && npm run version:fix && npm run compile:contracts && npm run generate:proof && npx hardhat test",
-	"test:partial": "npm run compile:contracts && npm run generate:proof && npx hardhat test",
+    "test:partial": "npm run compile:contracts && npm run generate:proof && npx hardhat test",
     "generate:proof": "bash scripts/generate-proofs.sh",
     "setup:circom": "bash scripts/setup-circom.sh"
   },
@@ -26,24 +26,27 @@
   },
   "homepage": "http://google.com",
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
-    "@nomiclabs/hardhat-waffle": "^2.0.2",
-    "@openzeppelin/contracts": "^4.5.0",
+    "@nomiclabs/hardhat-ethers": "^2.0.5",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
+    "@types/chai": "^4.3.1",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^17.0.30",
     "chai": "^4.3.6",
-    "circomlib": "^2.0.2",
-    "circomlibjs": "^0.1.1",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.5.4",
-    "hardhat": "^2.8.3",
-    "hardhat-contract-sizer": "^2.4.0",
-    "hardhat-deploy": "^0.10.4",
-    "hardhat-gas-reporter": "^1.0.7",
-    "sharp": "^0.30.0",
-    "snarkjs": "^0.4.13",
+    "circomlib": "^2.0.3",
+    "circomlibjs": "^0.1.2",
+    "ethereum-waffle": "^3.4.4",
+    "ethers": "^5.6.4",
+    "hardhat": "^2.9.3",
+    "hardhat-deploy": "^0.11.4",
+    "hardhat-gas-reporter": "^1.0.8",
+    "mocha": "^9.2.2",
+    "sharp": "^0.30.4",
+    "snarkjs": "^0.4.16",
+    "ts-node": "^10.7.0",
     "typechain": "^8.0.0",
-    "web3-utils": "^1.7.0",
+    "typescript": "^4.6.4",
     "zeros": "^1.0.0"
   }
 }
