--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@typechain/ethers-v5": "^10.0.0",
     "@typechain/hardhat": "^6.0.0",
     "@types/chai": "^4.3.1",
+    "@types/chai-as-promised": "^7.1.5",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.30",
     "chai": "^4.3.6",
@@ -48,5 +49,8 @@
     "typechain": "^8.0.0",
     "typescript": "^4.6.4",
     "zeros": "^1.0.0"
+  },
+  "dependencies": {
+    "chai-as-promised": "^7.1.1"
   }
 }
