reorg export system, update dummy circuits to have realistic salt. Add type files for circuit inputs (they are not hooked into automation). Remove mint

--- a/.gitignore
+++ b/.gitignore
@@ -120,6 +120,7 @@ scripts/archive
 contracts/archive
 circuits/build/**
 artifacts
+export
 private_keys.json
 typechain-types
 #TODO Add Verifiers to ignore once build process is nice and clean
