--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Social Deduction Game using ZK",
   "scripts": {
     "compile:contracts": "npx hardhat compile --force",
+    "copyartifacts" : "bash scripts/copy_exported_types.sh",
     "develop": "npx hardhat node",
     "deploy:localhost": "npx hardhat deploy --tags complete",
     "test": "npx hardhat test",
     "compile:circuits": "bash scripts/compile-circuits.sh",
     "version:fix": "node scripts/bump-solidity",
-    "test:fullProof": "npm run compile:circuits && npm run version:fix && npm run compile:contracts && npm run generate:proof && npx hardhat test",
-    "test:partial": "npm run compile:contracts && npm run generate:proof && npx hardhat test",
+    "test:fullProof": "npm run compile:circuits && npm run version:fix && npm run compile:contracts && npm run generate:proof  && npm run copyartifacts && npx hardhat test",
+    "test:partial": "npm run compile:contracts && npm run generate:proof && npm run copyartifacts && npx hardhat test",
     "generate:proof": "bash scripts/generate-proofs.sh",
     "setup:circom": "bash scripts/setup-circom.sh"
   },
