--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.30",
     "chai": "^4.3.6",
-    "circomlib": "^2.0.3",
-    "circomlibjs": "^0.1.2",
+    "circomlib": "^2.0.5",
+    "circomlibjs": "^0.1.7",
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "^5.6.4",
@@ -54,6 +54,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.6.0",
-    "chai-as-promised": "^7.1.1"
+    "chai-as-promised": "^7.1.1",
+    "yarn": "^1.22.19"
   }
 }
